# pico-dice

./: .gitignore  CMakeLists.txt  pico_dice.c  pico_dice.gatt
src/: CMakeLists.txt  dice_types.h  pico_dice.c
src/vendors/: CMakeLists.txt
